# mav_trajectory_generation

./: .gitignore
mav_trajectory_generation/: CMakeLists.txt  pyproject.toml
mav_trajectory_generation/python/: build_and_install_python_bindings.sh
mav_trajectory_generation/python/mav_trajectory_generation/: __init__.py  __init__.pyi  geographic_converter.py  plot_waypoints.py  test_mav_trajectory.py  test_mav_trajectory_4d.py  test_mav_trajectory_4d_gui.py  test_waypoints_processor.py  waypoints_processor.py
mav_trajectory_generation/src/: bindings.cpp
mav_trajectory_generation_example/: CMakeLists.txt
mav_trajectory_generation_example/cfg/: diff_drive_robot.rviz  rviz_view_firefly.rviz
mav_trajectory_generation_example/data/: filename.yaml  waypoints1.json  waypoints2.json  waypoints3.json
mav_trajectory_generation_example/include/mav_trajectory_generation_example/: example_planner.h
mav_trajectory_generation_example/launch/: bringup.launch  evaluate_plan.launch  example.launch  example_planner4d.launch
mav_trajectory_generation_example/rviz/: bringup.rviz  example_planner4d.rviz
mav_trajectory_generation_example/script/: dummy_controller.py
mav_trajectory_generation_example/src/: example_evaluate_plan.cpp  example_planner.cc  example_planner4d.cpp  example_planner_6dof.cc  example_planner_node.cc  pursuit_controller.h
mav_trajectory_generation_ros/include/mav_trajectory_generation_ros/: trajectory_sampler_node.h
mav_trajectory_generation_ros/src/: trajectory_sampler_node.cpp
rotors_control/include/rotors_control/: common.h
rotors_control/src/nodes/: lee_position_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.cpp
